# ASE_PicSim_Codacy

./: CMakeLists.txt  README.md  main.cpp
GUI/: info.cpp  infodialog.cpp  infodialog.h  picsimgui.cpp  picsimgui.h
Google_tests/: CMakeLists.txt  CommandTest.cpp  CreatePCLTest.cpp  DecodeTest.cpp  PicSimInitTest.cpp  RamTest.cpp  Rb0InterruptTest.cpp  ReadTest.cpp  StackTest.cpp  ToBinaryMockTest.cpp  UtilityMockTest.cpp
Google_tests/lib/: CMakeLists.txt
Google_tests/lib/googlemock/: CMakeLists.txt
Google_tests/lib/googletest/: CMakeLists.txt
PicSim_lib/: CMakeLists.txt  LSTFileHandler.h  addlw.cpp  andwf.cpp  andwf.h  bcf.cpp  bsf.cpp  bsf.h  btfsc.cpp  btfss.cpp  clrf.cpp  clrf.h  cmdcall.cpp  cmdcall.h  cmdgo.h  cmdreturn.cpp  command.h  customStack.cpp  decf.h  decfsz.cpp  decode.cpp  handler.cpp  incf.cpp  incfsz.h  iorlw.cpp  iorwf.cpp  movf.h  movwf.cpp  nop.h  picData.cpp  picData.h  picSim.cpp  picSim.h  ram.cpp  ram.h  retfie.h  retlw.h  rrf.cpp  sublw.h  subwf.cpp  (+5 more)
PicSim_lib/0_Abstraction_Code/: customStack.cpp  customStack.h  picData.cpp  picData.h  ram.cpp  ram.h
PicSim_lib/1_Domain_Code/: addlw.cpp  addlw.h  addwf.cpp  addwf.h  andlw.cpp  andlw.h  andwf.cpp  andwf.h  bcf.cpp  bcf.h  bsf.cpp  bsf.h  btfsc.cpp  btfsc.h  btfss.cpp  btfss.h  clrf.cpp  clrf.h  clrw.cpp  clrw.h  cmdcall.cpp  cmdcall.h  cmdgo.cpp  cmdgo.h  cmdreturn.cpp  cmdreturn.h  comf.cpp  comf.h  command.cpp  command.h  decf.cpp  decf.h  decfsz.cpp  decfsz.h  incf.cpp  incf.h  incfsz.cpp  incfsz.h  iorlw.cpp  iorlw.h  (+28 more)
PicSim_lib/2_Application_Code/: decode.cpp  decode.h  handler.cpp  handler.h  picSim.cpp  picSim.h  readFileInterface.h  utility.cpp  utility.h
PicSim_lib/3_Plugins/: LSTFileHandler.cpp  LSTFileHandler.h  info.cpp  info.h  infodialog.cpp  picsimgui.cpp  picsimgui.h
forms/: info.ui  infodialog.ui  picsimgui.ui
header/: addlw.h  addwf.h  andlw.h  andwf.h  bcf.h  bsf.h  btfsc.h  btfss.h  clrf.h  clrw.h  cmdcall.h  cmdgo.h  cmdreturn.h  comf.h  command.h  decf.h  decfsz.h  decode.h  handler.h  incf.h  incfsz.h  info.h  infodialog.h  inputfile.h  iorlw.h  iorwf.h  movf.h  movlw.h  movwf.h  myStack.h  nop.h  picData.h  picSim.h  picsimgui.h  ram.h  readFileInterface.h  retfie.h  retlw.h  rlf.h  rrf.h  (+6 more)
src/: LSTFileHandler.cpp  addlw.cpp  addwf.cpp  andlw.cpp  andwf.cpp  bcf.cpp  bsf.cpp  btfsc.cpp  btfss.cpp  clrf.cpp  clrw.cpp  cmdcall.cpp  cmdgo.cpp  cmdreturn.cpp  comf.cpp  command.cpp  customStack.cpp  decf.cpp  decfsz.cpp  decode.cpp  handler.cpp  incf.cpp  incfsz.cpp  info.cpp  infodialog.cpp  inputfile.cpp  iorlw.cpp  iorwf.cpp  main.cpp  movf.cpp  movlw.cpp  movwf.cpp  myStack.cpp  nop.cpp  picData.cpp  picSim.cpp  picsimgui.cpp  ram.cpp  readFileInterface.cpp  retfie.cpp  (+9 more)
src/0_Abstraction_Code/: customStack.cpp  picData.cpp  ram.cpp
src/1_Domain_Code/: addlw.cpp  addwf.cpp  andlw.cpp  andwf.cpp  bcf.cpp  bsf.cpp  btfsc.cpp  btfss.cpp  clrf.cpp  clrw.cpp  cmdcall.cpp  cmdgo.cpp  cmdreturn.cpp  comf.cpp  command.cpp  decf.cpp  decfsz.cpp  incf.cpp  incfsz.cpp  iorlw.cpp  iorwf.cpp  movf.cpp  movlw.cpp  movwf.cpp  nop.cpp  retfie.cpp  retlw.cpp  rlf.cpp  rrf.cpp  sublw.cpp  subwf.cpp  swapf.cpp  xorlw.cpp  xorwf.cpp
src/2_Application_Code/: decode.cpp  handler.cpp  picSim.cpp  utility.cpp
src/3_Plugins/: LSTFileHandler.cpp  info.cpp  infodialog.cpp  picsimgui.cpp
src/4_Main/: main.cpp
